some delections, addCigar form started

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,8 @@ html(lang='en' , ng-app ='site')
             div.navbar-header
                 a.navbar-brand(href='#/polls')= title
                 a.navbar-brand(href='#/AddNewOrder')= 'AddNewOrder'
+                a.navbar-brand(href='#/AddContact')= 'AddContact'
+                a.navbar-brand(href='#/AddCigar')= 'AddCigar'
         div.container
             div(ng-view)
             script(src="javascripts/app.js")
