--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,7 @@ html(lang='en' , ng-app ='site')
                 a.navbar-brand(href='#/AddNewOrder')= 'AddNewOrder'
                 a.navbar-brand(href='#/AddContact')= 'AddContact'
                 a.navbar-brand(href='#/AddCigar')= 'AddCigar'
+                a.navbar-brand(href='#/DisplayCigar')= 'DisplayCigar'
         div.container
             div(ng-view)
             script(src="javascripts/app.js")
